<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_about">Sobre</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movie_description">Descrição</string>
    <string name="movie_name">Nome</string>
    <string name="movie_rating">Qual sua nota para este filme?</string>
    <string name="txMovieName">Nome do filme</string>
    <string name="txMovieDescription">Descrição do filme</string>
    <string name="actions_save">Salvar</string>
    <string name="search_movies">Buscar filmes</string>
    <string name="search_books">Buscar livros</string>
    <string name="movie_image">URL da imagem</string>
    <string name="action_request_movies">Buscar filmes da API</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Abrir</string>
    <string name="close">Fechar</string>
    <string name="menu_movies">Filmes</string>
    <string name="menu_book">Livros</string>
    <string name="book_title">Título</string>
    <string name="book_author">Autor</string>
    <string name="book_description">Descrição</string>
    <string name="action_request_books">Buscar livros da API</string>
    <string name="book_amazon_url">URL da Amazon</string>
    <string name="book_amazon_url_link">Ir para Amazon</string>
</resources>