<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.book.BookDetailsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_title_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:counterTextAppearance="@style/counterText"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/book_title"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_description_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="12sp"
        app:counterEnabled="true"
        app:counterMaxLength="255"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:counterTextAppearance="@style/counterText"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_title_text_input_layout">

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/book_description" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_author_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="12sp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:counterTextAppearance="@style/counterText"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_description_text_input_layout">

        <EditText
            android:id="@+id/edAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/book_author" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/book_amazon_url_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="12sp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterOverflowTextAppearance="@style/counterOverride"
        app:counterTextAppearance="@style/counterText"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/book_author_text_input_layout">

        <EditText
            android:id="@+id/edAmazonUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/book_amazon_url" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btAmazonUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"

        android:text="@string/book_amazon_url_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>