<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".view.movie.MovieDetailsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/movie_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextAppearance="@style/counterText"
        app:counterOverflowTextAppearance="@style/counterOverride"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:lines="1"
            android:ems="10"
            android:hint="@string/movie_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/movie_description_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:counterEnabled="true"
        app:counterMaxLength="255"
        app:counterTextAppearance="@style/counterText"
        app:counterOverflowTextAppearance="@style/counterOverride"
        android:layout_marginTop="12sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_name_text_input_layout">

        <EditText
            android:id="@+id/edDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/movie_description" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/movie_image_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="12sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_description_text_input_layout">

        <EditText
            android:id="@+id/edImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/movie_image" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="18sp"
        android:layout_marginStart="4dp"
        android:text="@string/movie_rating"
        android:textSize="15sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_image_text_input_layout" />

    <SeekBar
        android:id="@+id/sbRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:max="100"
        android:min="0"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvRatingProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbRating" />

</androidx.constraintlayout.widget.ConstraintLayout>